tests/machine/x/go/group_by_conditional_sum.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_conditional_sum.go:96:10: non-boolean condition in if statement

1: //go:build ignore
